--- a/.github/workflows/kurtosis-ci.yml
+++ b/.github/workflows/kurtosis-ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 0xPolygon/kurtosis-cdk
-          ref: feat/cdk-erigon-zkevm
+          ref: main
           path: kurtosis-cdk
 
       - name: Install Kurtosis CDK tools
@@ -39,12 +39,12 @@ jobs:
       - name: Configure Kurtosis CDK
         working-directory: ./kurtosis-cdk
         run: |
-          yq -Y --in-place '.args.data_availability_mode = "cdk-validium"' params.yml
-          yq -Y --in-place '.args.zkevm_sequence_sender_image = "zkevm-sequence-sender:local"' params.yml
+          yq -Y --in-place '.args.data_availability_mode = "cdk-validium"' cdk-erigon-sequencer-params.yml
+          yq -Y --in-place '.args.zkevm_sequence_sender_image = "zkevm-sequence-sender:local"' cdk-erigon-sequencer-params.yml
 
       - name: Deploy Kurtosis CDK package
         working-directory: ./kurtosis-cdk
-        run: kurtosis run --enclave cdk-v1 --args-file params.yml --image-download always .
+        run: kurtosis run --enclave cdk-v1 --args-file cdk-erigon-sequencer-params.yml --image-download always .
 
       - name: Monitor verified batches
         working-directory: ./kurtosis-cdk
